fixed month hide on click outside, fixed alignment of date stuff

--- a/src/components/common/month-drop/MonthDrop.css
+++ b/src/components/common/month-drop/MonthDrop.css
@@ -2,18 +2,19 @@
 .false-month {
     border-style: none;
     border-radius: 3px;
-    height: 30px;
-    width: 75px;
+    height: 25px;
+    width: 82px;
+    margin-top: -5px;
     position: absolute;
     background-color: transparent;
-    margin-left: -73px;
-    margin-top: -2px;
 }
 .monthDropDown {
     position: absolute;
     background-color: white;
     max-height: 100px;
     overflow: scroll;
+    box-shadow: 0px 1px 8px rgba(0, 0, 0, 0.11);
+    align-self: flex-start;
 }
 li {
     list-style: none;
