--- a/src/components/pages/create/Create.css
+++ b/src/components/pages/create/Create.css
@@ -120,6 +120,7 @@ p {
 .multi-form div {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 .textarea-std {
     min-width: 288px;
